--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-// @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 
@@ -22,13 +22,6 @@ $slide-number: 4;
 
 html, body {
   overflow: hidden;
-}
-
-// TEMP
-// TODO: remove
-#nav {
-  position: relative;
-  z-index: 400000000;
 }
 
 .background {
