portfolio circle, class names refactor

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,6 +3,8 @@ $content-offset: 40vh;
 $transition-speed: 1.2s;
 $slide-number: 4;
 
+$geom-border-width: 5px;
+
 $offwhite: #fafaee;
 $geom-color: rgba(255, 255, 255, 0.5);
 $darker-dark: #2a272a;
