--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,1 +1,1 @@
-@import 'variables', 'global', 'nav', 'welcome', 'about', 'skills';
+@import 'variables', 'global', 'nav', 'welcome', 'about', 'skills', 'portfolio';
