--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -1,10 +1,10 @@
 
 .geom {
-  &-wrapper--about {
+  &-wrapper--triangle {
     transform: translate(20%, 0%);
   }
   
-  &-about {
+  &-triangle {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -28,7 +28,7 @@
   
         &:first-child {
           border: solid $geom-color;
-          border-width: 0 0 3px 3px;
+          border-width: 0 0 $geom-border-width $geom-border-width;
           transform-origin: left top;
         }
         
@@ -36,8 +36,7 @@
           top: -3px;
           width: 200%;
 
-          border: solid $geom-color;
-          border-width: 3px 0 0 0;
+          border-top: $geom-border-width solid $geom-color;
   
           transform: rotate(45deg);
           transform-origin: left top;
