--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -2,11 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
-@font-face {
-  font-family: "Clip";
-  src: url("../fonts/Clip.ttf");
-}
-
 // ------------- MIXINS ------------- //
 @mixin transition($time, $property: all, $easing: ease-in) {
   transition: $property $time $easing;
@@ -38,6 +33,8 @@ html, body {
 
   color: $offwhite;
 
+  border-bottom: 3px solid black;
+
   transform: translateY($parallax-offset);
   @include transition($transition-speed, all, cubic-bezier(0.22, 0.44, 0, 1));
   &:before {
@@ -52,21 +49,11 @@ html, body {
     background-color: rgba(0,0,0,.3);
   }
   &:first-child {
-    // background: linear-gradient(to bottom right, $darker-dark, $lighter-dark);
     transform: translateY(math.div(-$parallax-offset, 2)); 
     .content-wrapper {
       transform: translateY(math.div($parallax-offset, 2));
     }
   }
-  // &:nth-child(2) {
-  //   background: linear-gradient(to top left, $darker-dark, $lighter-dark);
-  // }
-  // &:nth-child(3) {
-  //   background: #44633F; //url(https://i.postimg.cc/TY0xQ41T/photo-1433840496881-cbd845929862.jpg) #47b8e0
-  // }
-  // &:nth-child(4) {
-  //   background: #3F4B3B; // #34314c
-  // }
 }
 
 @for $i from 1 to ($slide-number + 1) {
