--- a/src/assets/scss/_skills.scss
+++ b/src/assets/scss/_skills.scss
@@ -1,17 +1,16 @@
-@use "sass.math";
+// @use "sass.math";
 
 .geom {
-  &-wrapper--skills {
+  &-wrapper--line {
     transform: translate(0%, 75%);
   }
   
-  &-skills {
+  &-line {
     position: absolute;
     width: 100%;
     height: 100%;
-    
-    border: 3px solid $geom-color;
-    border-width: 3px 0 0 0;
+
+    border-top: $geom-border-width solid $geom-color;
 
     transform-origin: top;
     animation: infinite-rotate 15s linear infinite;
