--- a/src/assets/scss/_portfolio.scss
+++ b/src/assets/scss/_portfolio.scss
@@ -1,3 +1,10 @@
+
+// TODO: temporary solution
+.temp {
+  padding: 8rem 0;
+  justify-content: start;
+}
+
 .geom {
   &-wrapper--circle {
     transform: translate(5%, 20%);
